force-app/main/default/objects/Order__c/fields/Actual_available_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Actual_available_Credit_Limit__c</fullName>
    <label>Actual Available Credit Limit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>