force-app/main/default/objects/Order__c/fields/Amount_Difference__c.field-meta.xml
<CustomField>
    <fullName>Amount_Difference__c</fullName>
    <formula>Total_Amount__c - Order_Amount_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>