force-app/main/default/objects/Order__c/fields/Amount_of_refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_refund__c</fullName>
    <label>Collection Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>