force-app/main/default/objects/Order__c/fields/Amount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Amount_Rate__c</fullName>
    <formula>Amount_Difference__c / Order_Amount_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>