force-app/main/default/objects/Order__c/fields/Aprove_Level__c.field-meta.xml
<CustomField>
    <fullName>Aprove_Level__c</fullName>
    <label>Approval Level</label>
    <summarizedField>Order_Item__c.Approve_Level__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Item__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Normal Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>