force-app/main/default/objects/Order__c/fields/BPM_Contrcat_Numbder__c.field-meta.xml
<CustomField>
    <fullName>BPM_Contrcat_Numbder__c</fullName>
    <label>BPM Contract Numbder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>