force-app/main/default/objects/Order__c/fields/BPM_Damage_Assessment_Number__c.field-meta.xml
<CustomField>
    <fullName>BPM_Damage_Assessment_Number__c</fullName>
    <label>BPM Damage Assessment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>