force-app/main/default/objects/Order__c/fields/Change_Guide_Price_Item__c.field-meta.xml
<CustomField>
    <fullName>Change_Guide_Price_Item__c</fullName>
    <label>Change Guide Price Item</label>
    <summaryFilterItems>
        <field>Order_Item__c.Change_Price__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>