force-app/main/default/objects/Order__c/fields/Clearance_Days__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Days__c</fullName>
    <formula>Clearance_Date__c- Arrival_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clearance Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>