force-app/main/default/objects/Order__c/fields/Clearance_Included__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Included__c</fullName>
    <label>Clearance Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>