force-app/main/default/objects/Order__c/fields/Close_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Close_Item_Count__c</fullName>
    <label>Closed Item Count</label>
    <summaryFilterItems>
        <field>Order_Item__c.isClosed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>