force-app/main/default/objects/Order__c/fields/Close_Re__c.field-meta.xml
<CustomField>
    <fullName>Close_Re__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Closure_Reason</valueSetName>
    </valueSet>
</CustomField>