force-app/main/default/objects/Order__c/fields/Collection_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Collection_Amount_USD__c</fullName>
    <formula>Amount_of_refund__c / Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>