force-app/main/default/objects/Order__c/fields/Commission_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_New__c</fullName>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>