force-app/main/default/objects/Order__c/fields/Commission_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Commission_Calculation_Method__c</fullName>
    <label>Commission Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commission_Calculation_Method</valueSetName>
    </valueSet>
</CustomField>