force-app/main/default/objects/Order__c/fields/Commission_To__c.field-meta.xml
<CustomField>
    <fullName>Commission_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Customer_Type__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order (Commission To)</relationshipLabel>
    <relationshipName>Order1</relationshipName>
    <type>Lookup</type>
</CustomField>