force-app/main/default/objects/Order__c/fields/CRM_Approving_Credit__c.field-meta.xml
<CustomField>
    <fullName>CRM_Approving_Credit__c</fullName>
    <label>CRM Approving Credit Limit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>