force-app/main/default/objects/Order__c/fields/CurrentUserIsOwner__c.field-meta.xml
<CustomField>
    <fullName>CurrentUserIsOwner__c</fullName>
    <description>Leandro Aguirre在报表中不能看到其他人的Order</description>
    <formula>IF($User.Id == &apos;005Po00000OlqN7&apos; &amp;&amp; $User.Id &lt;&gt; OwnerId,false,true)            /*Leandro Aguirre*/</formula>
    <label>*CurrentUserIsOwner</label>
    <type>Checkbox</type>
</CustomField>