force-app/main/default/objects/Order__c/fields/Cust_Reference__c.field-meta.xml
<CustomField>
    <fullName>Cust_Reference__c</fullName>
    <label>Customer&apos;s PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>