force-app/main/default/objects/Order__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <formula>Customer__r.Street__c +&apos; &apos;+ Customer__r.House_Number__c+&apos; &apos;+&apos;,Col. &apos;+Customer__r.District__c +&apos; C.P. &apos;+Customer__r.Postal_Code__c+&apos;,&apos;+ Customer__r.City__c+&apos;, Estado de &apos;+Customer__r.Country__r.Name</formula>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>