force-app/main/default/objects/Order__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <formula>Text(Customer_Sales_Info__r.Payment_method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Group</label>
    <type>Text</type>
</CustomField>