force-app/main/default/objects/Order__c/fields/Customer_MDG_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_MDG_Code__c</fullName>
    <label>Customer MDG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>