force-app/main/default/objects/Order__c/fields/Customer_Sales_Info__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Sales Info</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Customer Sales Info is not synchronized</errorMessage>
        <filterItems>
            <field>Customer_Sales_Info__c.Sync_Status__c</field>
            <operation>equals</operation>
            <value>Synchronized</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Sales_Info__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>