force-app/main/default/objects/Order__c/fields/Customer_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Shipping Address</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>Customer_Shipping_Address__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <filterItems>
            <field>Customer_Shipping_Address__c.Status__c</field>
            <operation>equals</operation>
            <value>Enable</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Interface Profile, System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Shipping_Address__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>