force-app/main/default/objects/Order__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Payment Term Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>