force-app/main/default/objects/Order__c/fields/Delivery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Amount__c</fullName>
    <label>Delivered Amount</label>
    <summarizedField>Delivery_Note__c.Delivery_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Delivery_Note__c.Delivery_Post_Status__c</field>
        <operation>equals</operation>
        <value>B 	Partially processed, C 	Completely processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Delivery_Note__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>