force-app/main/default/objects/Order__c/fields/Delivery_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Amount_USD__c</fullName>
    <formula>Delivery_Amount__c / Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>