force-app/main/default/objects/Order__c/fields/Delivery_Note_Count__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Count__c</fullName>
    <label>Delivery Note Count</label>
    <summaryForeignKey>Delivery_Note__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>