force-app/main/default/objects/Order__c/fields/Distrubutor_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Distrubutor_Exchange_Rate__c</fullName>
    <inlineHelpText>Distrubutor Invoice to Farmer</inlineHelpText>
    <label>Distrubutor Exchange Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>