force-app/main/default/objects/Order__c/fields/Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Down Payment Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select down payment order.</errorMessage>
        <filterItems>
            <field>Order__c.Order_type__c</field>
            <operation>equals</operation>
            <value>ZMX6 Down Payment MX</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>