force-app/main/default/objects/Order__c/fields/Down_Payment_Collection_Amount__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Collection_Amount__c</fullName>
    <formula>Down_Payment__r.Amount_of_refund__c</formula>
    <label>Down Payment Collection Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>