force-app/main/default/objects/Order__c/fields/E_Document_MX__c.field-meta.xml
<CustomField>
    <fullName>E_Document_MX__c</fullName>
    <label>E-Document MX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>