force-app/main/default/objects/Order__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Receiver Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>