force-app/main/default/objects/Order__c/fields/Exceeded_Credit_Limit_USD__c.field-meta.xml
<CustomField>
    <fullName>Exceeded_Credit_Limit_USD__c</fullName>
    <formula>IF((Order_Amount_USD__c -  Actual_available_Credit_Limit__c) &gt; 0, Order_Amount_USD__c -  Actual_available_Credit_Limit__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceeded Credit Limit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>