force-app/main/default/objects/Order__c/fields/Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>Excess_Amount__c</fullName>
    <formula>Order_Amount_USD__c - Actual_available_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>