force-app/main/default/objects/Order__c/fields/Exporting_Country__c.field-meta.xml
<CustomField>
    <fullName>Exporting_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exporting Country</label>
    <referenceTo>Country_Province_Master_Data__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>