force-app/main/default/objects/Order__c/fields/File_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>File Date</label>
    <type>Date</type>
</CustomField>