force-app/main/default/objects/Order__c/fields/Free_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Free_Item_Count__c</fullName>
    <label>Free Item Count</label>
    <summaryFilterItems>
        <field>Order_Item__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Free Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>