force-app/main/default/objects/Order__c/fields/Goods_Return_Requested__c.field-meta.xml
<CustomField>
    <fullName>Goods_Return_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goods Return Requested</label>
    <type>Checkbox</type>
</CustomField>