force-app/main/default/objects/Order__c/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deliver_Plant__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Incoterms</valueSetName>
    </valueSet>
</CustomField>