force-app/main/default/objects/Order__c/fields/Invoice_Amount_Net__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Net__c</fullName>
    <label>Invoice Amount without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>