force-app/main/default/objects/Order__c/fields/Invoice_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_USD__c</fullName>
    <formula>Invoice_Amount__c / Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount With Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>