force-app/main/default/objects/Order__c/fields/Invoice_Amount_w_o_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_w_o_Tax_USD__c</fullName>
    <formula>Invoice_Amount_Net__c/Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount w/o Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>