force-app/main/default/objects/Order__c/fields/Is_Base_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Base_Quote__c</fullName>
    <formula>IF(ISBLANK(Quotes__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Created from Quotation</label>
    <type>Checkbox</type>
</CustomField>