force-app/main/default/objects/Order__c/fields/Is_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change</label>
    <type>Checkbox</type>
</CustomField>