force-app/main/default/objects/Order__c/fields/Is_Copy_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Copy_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Copy Order</label>
    <type>Checkbox</type>
</CustomField>