force-app/main/default/objects/Order__c/fields/Is_From_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Campaign__c</fullName>
    <formula>AND(NOT(ISNULL(Campaign__c)),NOT(ISBLANK(Campaign__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is From Campaign</label>
    <type>Checkbox</type>
</CustomField>