force-app/main/default/objects/Order__c/fields/Is_Import__c.field-meta.xml
<CustomField>
    <fullName>Is_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Import？</label>
    <type>Checkbox</type>
</CustomField>