force-app/main/default/objects/Order__c/fields/Is_Meet_the_inventory__c.field-meta.xml
<CustomField>
    <fullName>Is_Meet_the_inventory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is met the inventory</label>
    <type>Checkbox</type>
</CustomField>