force-app/main/default/objects/Order__c/fields/Is_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Rep__c</fullName>
    <formula>CONTAINS($Profile.Name , &apos;Sales Rep&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sales Rep</label>
    <type>Checkbox</type>
</CustomField>