force-app/main/default/objects/Order__c/fields/Is_Send_PDF__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_PDF__c</fullName>
    <formula>if(ISBLANK(Down_Payment__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Send PDF</label>
    <type>Checkbox</type>
</CustomField>