force-app/main/default/objects/Order__c/fields/Is_Upload_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Is_Upload_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Uploaded Attachment</label>
    <type>Checkbox</type>
</CustomField>