force-app/main/default/objects/Order__c/fields/Is_YPF__c.field-meta.xml
<CustomField>
    <fullName>Is_YPF__c</fullName>
    <formula>AND(Text(Customer_Sales_Info__r.Payment_method__c) == &apos;YPF&apos;,Text(Sales_Org__c) == &apos;5070&apos;, RecordType.DeveloperName == &apos;Model_C&apos;)</formula>
    <label>Is YPF</label>
    <type>Checkbox</type>
</CustomField>