force-app/main/default/objects/Order__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>