force-app/main/default/objects/Order__c/fields/Last_Week_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Week_Order_Amount__c</fullName>
    <formula>IF(Approve_Date__c &gt;= (TODAY()-7-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+2) &amp;&amp; Approve_Date__c &lt;= TODAY()-7-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+8,
Order_Amount_Report__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Week Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>