force-app/main/default/objects/Order__c/fields/Locked_in_SAP__c.field-meta.xml
<CustomField>
    <fullName>Locked_in_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Locked in SAP</label>
    <type>Checkbox</type>
</CustomField>