force-app/main/default/objects/Order__c/fields/Logistics_Approved__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logistics Approved</label>
    <type>Checkbox</type>
</CustomField>